--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cmakeExplorer.buildDir": "${workspaceFolder}/build",
     "cmakeExplorer.buildConfig": "Debug",
-    "cmakeExplorer.suiteDelimiter": "-"
+    "cmakeExplorer.suiteDelimiter": "-",
+    "cmakeExplorer.extraCtestEnvVars": {
+        "NO_COLOR": "1"
+    }
 }
